welcome.lessons.welcome.bat.bool1.LastDigit.scala.code
def lastDigit(a:Int, b:Int):Boolean = {
  while ( a > 10) {
  	a = a % 10
  }
  while (b > 10) {
    b = b % 10
  }
  if (a==b) {
    return true
  } else return false
}
 